Add 4 exercises and inspect instuctions

--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
         <br><br><br>
         <p>Formulário é uma série de campos onde preenchemos dados que vão ajudar o usuário a interagir com nosso site.</p>
         <p>Para criar esses campos, vamos usar a tag 'form' e dentro dela, os itens com a tag 'input'</p>
-        <p>Cada input pode ser de um tipo, definido na propriedade 'type'. No formulário abaixo, inspecione os elementos e veja quais os tipos usados.</p>
+        <p>Cada input pode ser de um tipo, definido na propriedade 'type'. No formulário abaixo, <a href="inspect.html">inspecione</a> os elementos e veja quais os tipos usados.</p>
         <p>Cada input tem também um 'name', que funciona de forma similar ao 'id'. Por fim, cada input tem um 'value', que é exatamente o que está escrito dentro da caixinha</p>
         <p>ou a opção selecionada. Vamos brincar um pouco com isso:</p>
         <hr>
