Better inspect.html/Open inspect.html in new tab/Putting die image on exercise

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <h2><font color="red">Hacker Area!</font></h2>
         <p>Todas as páginas tem esta área. Aqui você pode ver truques mais avançados.</p>
         <hr>
+        <p>Uma página interessante de visitar caso haja dúvidas em como funciona alguma função ou método JavaScript: <a href="https://developer.mozilla.org/pt-BR/">MDN</a></p>
+        <hr>
         <p>Contato para dúvidas: ra.pha@live.com ou via reddit direct message (u/FulecoMaldito)</p>
     </body>
 </html>
