--- a/inspect.html
+++ b/inspect.html
@@ -5,11 +5,15 @@
         <title>Inspecionar</title>
     </head>
     <body>
-        <h1>Como inspecionar</h1>
-        <p>Inspecionar elemento é um recurso dos navegadores da web para poder olhar para os itens do site e seu código html relacionado.</p>
+        <h1>Como inspecionar no computador</h1>
+        <p>Inspecionar elemento é um recurso dos navegadores da web para poder olhar para os itens do site e seu código HTML relacionado.</p>
         <p>Para poder fazer isso, basta clicar com o botão direito do mouse no elemento que você quer olhar e selecionar 'inspecionar elemento'.</p>
-        <p>Você pode também ver todo o código html do site presionando ctrl+shift+i e depois você pode navegar pelo código para achar seu elemente.</p> 
-        <p>Ele mostra qual elemento está sendo selecionado na página. Você também pode alterar o código html da página nessa aba, mas as modificações não serão permanentes.</p>
+        <p>Você pode também ver todo o código HTML do site presionando ctrl+shift+i e depois você pode navegar pelo código para achar seu elemente.</p> 
+        <p>Ele mostra qual elemento está sendo selecionado na página. Você também pode alterar o código HTML da página nessa aba, mas as modificações não serão permanentes.</p>
         <h4>Atenção: Isso não funciona no Internet Explorer nem no Microsoft Edge</h4>
+        <hr>
+        <h1>Como inspecionar no celular</h1>
+        <p>Inspecionar no celular é um pouco diferente. Dá para ver e editar todo o HTML do site, mas não qual elemento é qual. Ainda assim, tente olhar e ver de qual</p>
+        <p>elemento estamos falando. Par acessar o HTML do site, clique no URL, clique no lápis para editar o URL e coloque 'view-source:' antes de tudo que esstiver escrito.</p>
     </body>
 </html>
