--- a/links.html
+++ b/links.html
@@ -11,7 +11,7 @@
         <p>Primeiro você deve criar um pedaço de texto no qual você vai colocar o link. Depois, é só fazer a referência para onde você vai ao clicar no link.</p>
         <p>Para isso, usamos a propriedade 'href' da tag 'a'. Veja o texto a seguir. Ele é um link para a página do codifique. Clique nele.</p>
         <a href="https://cursocodifique.weebly.com/">Codifique</a>
-        <p>Viu que ele te mandou para a página certinho? Agora, clique no link com o botão direito e selecione <a href="inspect.html">'Inspecionar elemento'</a>. Você deve ver algo parecido com isso:</p>
+        <p>Viu que ele te mandou para a página certinho? Agora, clique no link com o botão direito e selecione <a href="inspect.html" target="_blank">'Inspecionar elemento'</a>. Você deve ver algo parecido com isso:</p>
         <img src="link-image.png">
         <p>Veja como é apenas fazer a referência entre aspas do link que você quer ir para a propriedade 'href' da tag 'a'.</p>
 
