--- a/exercises.html
+++ b/exercises.html
@@ -30,5 +30,7 @@
        <p>Crie uma página na qual eles escolhem qual o valor máximo que pode sair no dado. Depois, eles apertam um botão e geram um número aleatório entre</p>
        <p>1 e o número digitado por eles. O resultado deve ser mostrado na tela. Além disso, crie botões que definam o número máximo como um dos dados padrões de</p>
        <p>RPG (d2, d4, d6, d8, d10, d12, d20, d100). Além disso, crie um botão para gerar um número múltiplo de 10 entre 00 e 90 (d10x10).</p>
+       <img src="dados.jpg">
+       <hr>
     </body>
 </html>
