--- a/exercises.html
+++ b/exercises.html
@@ -5,7 +5,7 @@
         <title>Exercícios</title>
     </head>
     <body>
-        <a href="index.html">Home</a>
+        <a href="index.html" id="home">Home</a>
        <h1>Lista de exercícios</h1>
        <p>Para facilitar navegação, recomenda-se que se faça uma página inicial com um link para cada uma das respostas dos exercícios.</p>
        <h2>Fã #1</h2>
@@ -32,5 +32,6 @@
        <p>RPG (d2, d4, d6, d8, d10, d12, d20, d100). Além disso, crie um botão para gerar um número múltiplo de 10 entre 00 e 90 (d10x10).</p>
        <img src="dados.jpg">
        <hr>
+       <a href="#home">Voltar para o topo</a>
     </body>
 </html>
