fixing button on buttons.html

--- a/buttons.html
+++ b/buttons.html
@@ -9,7 +9,7 @@
         <h1>Botões</h1>
         <p>Botões são itens muito importantes em html. É por meio deles que fica fácil para usuários interagirem.</p>
         <p>Para criar um botão, você deve usar a tag 'button'. Ela geralmente vem com um id (vide <a href="id.html">IDs e JavaScript</a>) dentro,</p>
-        <p>que é o que você usará para colocar o programa para funcionar. <a href="inspect.html" target="_blank">Inspecione</ahref> o botão a seguir e veja:</p>
+        <p>que é o que você usará para colocar o programa para funcionar. <a href="inspect.html" target="_blank">Inspecione</a> o botão a seguir e veja:</p>
         <button id="buuu">Olha o susto...</button>
         <div id="susto" style="visibility: hidden">
             <img src="fantasma.jpg" height="500" >
