Fix buttons.html title

--- a/buttons.html
+++ b/buttons.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <title>
+    <head>
         <meta charset="utf-8">
         <title>Botões</title>
-    </title>
+    </head>
     <body>
         <a href="index.html" id="top">Home</a>
         <h1>Botões</h1>
