--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <hr>
         <p>Uma página interessante de visitar caso haja dúvidas em como funciona alguma função ou método JavaScript: <a href="https://developer.mozilla.org/pt-BR/">MDN</a></p>
         <hr>
-        <p>Contato para dúvidas: ra.pha@live.com ou via reddit direct message (u/FulecoMaldito)</p>
+        <p>Contato para dúvidas: ra.pha@live.com ou via Discord (FulecoMaldito#6006)</p>
         <p>Para reportar bugs e problemas no site, acesse <a href="https://github.com/FulecoRafa/web-tutorial/issues">aqui</a> e mande um novo problema.</p>
     </body>
 </html>
