--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <p>Por favor, fique a vontade para inspecionar os elementos do site. Eles foram feitos da maneira mais simples para que fossem fáceis de entender.</p>
         <a href="links.html">Links</a>
         <a href="images.html">Imagens</a>
+        <a href="videos.html">Vídeos</a>
         <a href="id.html">IDs e JavaScript</a>
         <a href="buttons.html">Botões</a>
         <a href="form.html">Formulários</a>
