Adding tag to textBox.innerHTML

--- a/exercises.html
+++ b/exercises.html
@@ -9,7 +9,7 @@
        <h1>Lista de exercícios</h1>
        <p>Para facilitar navegação, recomenda-se que se faça uma página inicial com um link para cada uma das respostas dos exercícios.</p>
        <h2>Fã #1</h2>
-       <p>Faça uma página em html sobre sua banda favorita. Nela, sua index.html deve ter informações da banda (ano de criação, gênero musical, número de albuns, etc.</p>
+       <p>Faça uma página em html sobre sua banda favorita. Nela, sua index.html (sua página inicial deve ter esse nome) deve ter informações da banda (ano de criação, gênero musical, número de albuns, etc.</p>
        <p>Nela, também deve ter uma foto de cada um dos integrantes. Essa foto deve ter um link para que quando clicar-se na imagem, isso leve a gente para uma página</p>
        <p>numa nova aba com as informações desse artista (idade, instrumento tocado, sexo, etc.). Além disso, no começo da página deve existir um 'index' com links</p>
        <p>internos para cada um dos músicos.</p>
