--- a/exercises.html
+++ b/exercises.html
@@ -5,33 +5,54 @@
         <title>Exercícios</title>
     </head>
     <body>
-        <a href="index.html" id="home">Home</a>
-       <h1>Lista de exercícios</h1>
-       <p>Para facilitar navegação, recomenda-se que se faça uma página inicial com um link para cada uma das respostas dos exercícios.</p>
-       <h2>Fã #1</h2>
-       <p>Faça uma página em html sobre sua banda favorita. Nela, sua index.html (sua página inicial deve ter esse nome) deve ter informações da banda (ano de criação, gênero musical, número de albuns, etc.</p>
-       <p>Nela, também deve ter uma foto de cada um dos integrantes. Essa foto deve ter um link para que quando clicar-se na imagem, isso leve a gente para uma página</p>
-       <p>numa nova aba com as informações desse artista (idade, instrumento tocado, sexo, etc.). Além disso, no começo da página deve existir um 'index' com links</p>
-       <p>internos para cada um dos músicos.</p>
-       <hr>
-       <h2>Dado virtual 1</h2>
-       <p>João, Ana e Pedro querem jogar um jogo de azar. Nesse jogo, cada um roda um dado de 6 lados e, quem tiver o maior número ganha. Mas eles estão sem dinheiro</p>
-       <p>para comprar dados, eles só têm um computador, mas eles não sabem programar. Ajude eles! Faça uma página com três botões, um para cada jogador, que quando clicado</p>
-       <p>gera um número aleatório entre 1 e 6 e mostre o resultado para eles. Além disso, faça uma parte da página mostrar quem foi o vencedor ou se foi empate.</p>
-       <p>Enfim, crie um botão para resetar todas as informações e um botão para cada dado para zerar o valor de cada jogador. Caso apenas dois jogadores quiserem</p>
-       <p>jogar, o site deve mostrar quem do mesmo jeito.</p>
-       <hr>
-       <h2>Calculadora</h2>
-       <p>Para este exercício, crie uma página da web em forma de formulário que receba 2 números e deixe o usúario escolher qual operação ele quer fazer. A implementação</p>
-       <p>do seletor de operação fica a seu critério como vai funcionar. O resultado deve ser mostrado no final da página.</p>
-       <hr>
-       <h2>Dado virtual 2</h2>
-       <p>João, Ana e Pedro cresceram! Agora, eles deixaram de jogar jogo de azar e vão jogar RPG! Mas eles continuam sem dinheiro para dados.</p>
-       <p>Crie uma página na qual eles escolhem qual o valor máximo que pode sair no dado. Depois, eles apertam um botão e geram um número aleatório entre</p>
-       <p>1 e o número digitado por eles. O resultado deve ser mostrado na tela. Além disso, crie botões que definam o número máximo como um dos dados padrões de</p>
-       <p>RPG (d2, d4, d6, d8, d10, d12, d20, d100). Além disso, crie um botão para gerar um número múltiplo de 10 entre 00 e 90 (d10x10).</p>
-       <img src="dados.jpg">
-       <hr>
+       <a href="index.html" id="home">Home</a>
+       <ol>
+        <h1>Lista de exercícios</h1>
+        <p>Para facilitar navegação, recomenda-se que se faça uma página inicial com um link para cada uma das respostas dos exercícios.</p>
+        <li><h2>Fã #1</h2>
+        <p>Faça uma página em html sobre sua banda favorita. Nela, sua index.html (sua página inicial deve ter esse nome) deve ter informações da banda (ano de criação, gênero musical, número de albuns, etc.</p>
+        <p>Nela, também deve ter uma foto de cada um dos integrantes. Essa foto deve ter um link para que quando clicar-se na imagem, isso leve a gente para uma página</p>
+        <p>numa nova aba com as informações desse artista (idade, instrumento tocado, sexo, etc.). Além disso, no começo da página deve existir um 'index' com links</p>
+        <p>internos para cada um dos músicos.</p>
+        </li>
+        <hr>
+        <li><h2>Dado virtual 1</h2>
+        <p>João, Ana e Pedro querem jogar um jogo de azar. Nesse jogo, cada um roda um dado de 6 lados e, quem tiver o maior número ganha. Mas eles estão sem dinheiro</p>
+        <p>para comprar dados, eles só têm um computador, mas eles não sabem programar. Ajude eles! Faça uma página com três botões, um para cada jogador, que quando clicado</p>
+        <p>gera um número aleatório entre 1 e 6 e mostre o resultado para eles. Além disso, faça uma parte da página mostrar quem foi o vencedor ou se foi empate.</p>
+        <p>Enfim, crie um botão para resetar todas as informações e um botão para cada dado para zerar o valor de cada jogador. Caso apenas dois jogadores quiserem</p>
+        <p>jogar, o site deve mostrar quem do mesmo jeito.</p>
+        </li>
+        <hr>
+        <li><h2>Calculadora</h2>
+        <p>Para este exercício, crie uma página da web em forma de formulário que receba 2 números e deixe o usúario escolher qual operação ele quer fazer. A implementação</p>
+        <p>do seletor de operação fica a seu critério como vai funcionar. O resultado deve ser mostrado no final da página.</p>
+        </li>
+        <hr>
+        <li><h2>Dado virtual 2</h2>
+        <p>João, Ana e Pedro cresceram! Agora, eles deixaram de jogar jogo de azar e vão jogar RPG! Mas eles continuam sem dinheiro para dados.</p>
+        <p>Crie uma página na qual eles escolhem qual o valor máximo que pode sair no dado. Depois, eles apertam um botão e geram um número aleatório entre</p>
+        <p>1 e o número digitado por eles. O resultado deve ser mostrado na tela. Além disso, crie botões que definam o número máximo como um dos dados padrões de</p>
+        <p>RPG (d2, d4, d6, d8, d10, d12, d20, d100). Além disso, crie um botão para gerar um número múltiplo de 10 entre 00 e 90 (d10x10).</p>
+        <img src="dados.jpg">
+        </li>
+        <hr>
+        <li><h2>Mamãe esquecida</h2>
+        <p>Sua mãe chega frustada em casa. Ela foi no supermercado, mas tinha perdido a lista de compras. "Ahhhh, se tivesse uma maneira de eu salvar isso em algum lugar sem precisar de papel!"</p>
+        <p>ela fala. Ajude sua mãezinha querida! Faça uma página na internet com um formulário que receba quantidade e qual o item para comprar no supermercado. Toda vez que colocar-se um novo</p>
+        <p>item, ele deve ser colocado numa lista não ordenada para gerar a lista de compras da sua mãezona!</p>
+        </li>
+        <hr>
+        <li><h2>Competição de Kart</h2>
+        <p><font color="red">Atenção! Exercício Avançado! Só hackers fazem!</font></p>
+        <p>Sua escola está fazendo uma competição de MárioKart! Seus professores querem extender a competição, mas demoraria muito para criar o placar das pessoas. Como eles sabem que você programa</p>
+        <p><b>MUITO</b> bem, eles te pedem para fazer uma página na internet que receba o nome dos jogadores, o personagem que ele está jogando (Mario , Luigi, Peach, Bowser, Toad ou Yoshi) e a pontuação</p>
+        <p>para poder criar um placar dos jogadores e mostrar quem é o vencedor, com a imagem de seu personagem do lado (pode usar imagens da internet). Você sabe que o número máximo de jogadores</p>
+        <p>na competição é 32, mas podem ter menos. Se houver empate, a pessoa que for inserida primeiro deve ficar na frente (injusto mas é isso aí ¯\_(ツ)_/¯).</p>
+        <p><font color="blue">Sugestão: Bubble sort e vetores em JavaScript. É bastante avançado.</font></p>
+        </li>
+        <hr>
+       </ol>
        <a href="#home">Voltar para o topo</a>
     </body>
 </html>
