--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             #exer{
                 padding: 20px;
             }
+            ul + ul{
+                margin-inline: 30px;
+            }
         </style>
         <meta charset="utf-8">
         <title>Tutorial de HTML e JavaScript</title>
@@ -33,6 +36,7 @@
             <ul>
                 <h2><b>HTML:</b></h2>
                 <li><a href="links.html">Links</a></li>
+                <li><a href="list.html">Listas</a></li>
                 <li><a href="images.html">Imagens</a></li>
                 <li><a href="videos.html">Vídeos</a></li>
             </ul>
