Adding image to inspect.html

--- a/inspect.html
+++ b/inspect.html
@@ -10,6 +10,8 @@
         <p>Para poder fazer isso, basta clicar com o botão direito do mouse no elemento que você quer olhar e selecionar 'inspecionar elemento'.</p>
         <p>Você pode também ver todo o código HTML do site presionando ctrl+shift+i e depois você pode navegar pelo código para achar seu elemente.</p> 
         <p>Ele mostra qual elemento está sendo selecionado na página. Você também pode alterar o código HTML da página nessa aba, mas as modificações não serão permanentes.</p>
+        <p>Você vai ver algo parecido com isso:</p>
+        <img src="link-image.png">
         <h4>Atenção: Isso não funciona no Internet Explorer nem no Microsoft Edge</h4>
         <hr>
         <h1>Como inspecionar no celular</h1>
