--- a/exercises.html
+++ b/exercises.html
@@ -43,10 +43,15 @@
         <p>item, ele deve ser colocado numa lista não ordenada para gerar a lista de compras da sua mãezona!</p>
         </li>
         <hr>
-        <li><h2>Competição de Kart</h2>
+        <li><h2>Competição de Kart 1</h2></li>
+        <p>Sua escola está fazendo uma competição de MárioKart! Você e seus 4 amigos decidem apostar um pastel e um refri pra quem ganhar, pago pelos perdedores. Você tem tanta certeza que vai ganhar</p>
+        <p>de lavada que decidiu fazer um site para vcê preencher as informações de nome, personagem (Mario , Luigi, Peach, Bowser, Toad ou Yoshi) e número de vitórias de cada uma e depois mostrar</p>
+        <p>numa tabela o placar final para poder mangar mais fácil deles.</p>
+        <hr>
+        <li><h2>Competição de Kart 2</h2>
         <p><font color="red">Atenção! Exercício Avançado! Só hackers fazem!</font></p>
-        <p>Sua escola está fazendo uma competição de MárioKart! Seus professores querem extender a competição, mas demoraria muito para criar o placar das pessoas. Como eles sabem que você programa</p>
-        <p><b>MUITO</b> bem, eles te pedem para fazer uma página na internet que receba o nome dos jogadores, o personagem que ele está jogando (Mario , Luigi, Peach, Bowser, Toad ou Yoshi) e a pontuação</p>
+        <p>Sua escola está fazendo uma competição de MárioKart! De novo! Seus professores viram o placar que você fez na compatição anterior e viram como você programa</p>
+        <p><b>MUITO</b> bem. Eles te pedem para fazer uma página na internet que receba o nome dos jogadores, o personagem que ele está jogando (Mario , Luigi, Peach, Bowser, Toad ou Yoshi) e a pontuação</p>
         <p>para poder criar um placar dos jogadores e mostrar quem é o vencedor, com a imagem de seu personagem do lado (pode usar imagens da internet). Você sabe que o número máximo de jogadores</p>
         <p>na competição é 32, mas podem ter menos. Se houver empate, a pessoa que for inserida primeiro deve ficar na frente (injusto mas é isso aí ¯\_(ツ)_/¯).</p>
         <p><font color="blue">Sugestão: Bubble sort e vetores em JavaScript. É bastante avançado.</font></p>
