--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="list.html">Listas</a></li>
                 <li><a href="images.html">Imagens</a></li>
                 <li><a href="videos.html">Vídeos</a></li>
+                <li><a href="./table.html">Tabelas</a></li>
             </ul>
             <ul>
                 <h2><b>HTML + JavaScript:</b></h2>
