Making links better at index.htlm

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <h2><font color="red">Hacker Area!</font></h2>
         <p>Todas as páginas tem esta área. Aqui você pode ver truques mais avançados.</p>
         <hr>
-        <p>Uma página interessante de visitar caso haja dúvidas em como funciona alguma função ou método JavaScript: <a href="https://developer.mozilla.org/pt-BR/">MDN</a></p>
+        <p>Uma página interessante de visitar caso haja dúvidas em como funciona alguma função ou método JavaScript: <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN</a></p>
         <hr>
         <p>Contato para dúvidas: ra.pha@live.com ou via Discord (FulecoMaldito#6006)</p>
-        <p>Para reportar bugs e problemas no site, acesse <a href="https://github.com/FulecoRafa/web-tutorial/issues">aqui</a> e mande um novo problema.</p>
+        <p>Para reportar bugs e problemas no site, acesse <a href="https://github.com/FulecoRafa/web-tutorial/issues" target="_blank">aqui</a> e mande um novo problema.</p>
     </body>
 </html>
