--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
         <div id="topics">
             <ul>
                 <h2><b>HTML:</b></h2>
-                <li><a href="links.html">Links</a></li>
-                <li><a href="list.html">Listas</a></li>
-                <li><a href="images.html">Imagens</a></li>
-                <li><a href="videos.html">Vídeos</a></li>
-                <li><a href="./table.html">Tabelas</a></li>
+                <li><a href="./pages/links/links.html">Links</a></li>
+                <li><a href="./pages/lists/list.html">Listas</a></li>
+                <li><a href="./pages/images/images.html">Imagens</a></li>
+                <li><a href="./pages/videos/videos.html">Vídeos</a></li>
+                <li><a href="./pages/tables/table.html">Tabelas</a></li>
             </ul>
             <ul>
                 <h2><b>HTML + JavaScript:</b></h2>
-                <li><a href="id.html">IDs e JavaScript</a></li>
-                <li><a href="buttons.html">Botões</a></li>
-                <li><a href="form.html">Formulários</a></li>
+                <li><a href="./pages/id/id.html">IDs e JavaScript</a></li>
+                <li><a href="./pages/buttons/buttons.html">Botões</a></li>
+                <li><a href="./pages/forms/form.html">Formulários</a></li>
             </ul>
-            <a href="exercises.html" id="exer">Exercícios</a>
+            <a href="./pages/exercises/exercises.html" id="exer">Exercícios</a>
         </div>
         <hr>
         <h2><font color="red">Hacker Area!</font></h2>
