--- a/pages/exercises/exercises.html
+++ b/pages/exercises/exercises.html
@@ -5,7 +5,7 @@
         <title>Exercícios</title>
     </head>
     <body>
-       <a href="index.html" id="home">Home</a>
+       <a href="../../index.html" id="home">Home</a>
        <ol>
         <h1>Lista de exercícios</h1>
         <p>Para facilitar navegação, recomenda-se que se faça uma página inicial com um link para cada uma das respostas dos exercícios.</p>
