--- a/pages/lists/list.html
+++ b/pages/lists/list.html
@@ -6,7 +6,7 @@
         <title>Listas</title>
     </head>
     <body>
-        <a href="index.html" id="home">Home</a>
+        <a href="../../index.html" id="home">Home</a>
         <h1>Listas</h1>
         <p>Listas são objetos em html que marcam itens de uma lista que você quer criar. Elas são formadas por uma tag para indicar o início da lista</p>
         <p>e para cada item que você cria, você coloca dentro da tag 'li'. Lembrando que você pode colocar o que quiser dentro da tag. Veja os exeplos:</p>
@@ -14,7 +14,7 @@
         <br><hr>
         <h2>Listas Ordenadas:</h2>
         <p>São listas que ordenam os itens. Basicamente, cada item é associado a um número que será colocado antes do conteúdo do item.</p>
-        <p>A tag para <font color="red">O</font>rdered <font color="red">L</font>ist (Lista Ordenada em Inglês) é 'ol'. <a href="inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
+        <p>A tag para <font color="red">O</font>rdered <font color="red">L</font>ist (Lista Ordenada em Inglês) é 'ol'. <a href="../../inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
         <ol>
             <h2><b>Afazeres:</b></h2>
             <li>Aprender HTML</li>
@@ -27,7 +27,7 @@
         <ol>
             <li>
                 <h3>Reversed:</h3>
-                <p>Usado na tag 'ol' para fazer com que seja contado ao contrário, em ordem decrescente. <a href="inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
+                <p>Usado na tag 'ol' para fazer com que seja contado ao contrário, em ordem decrescente. <a href="../../inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
                 <ol reversed>
                     <li>!</li>
                     <li>World</li>
@@ -36,7 +36,7 @@
             </li>
             <li>
                 <h3>Start:</h3>
-                <p>Usado na tag 'ol' para indicar em qual número começar. <a href="inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
+                <p>Usado na tag 'ol' para indicar em qual número começar. <a href="../../inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
                 <ol start="4">
                     <h4>Quem não ganhou medalha:</h4>
                     <li>Joana</li>
@@ -46,7 +46,7 @@
             </li>
             <li>
                 <h3>Type:</h3>
-                <p>Usado na tag 'ol' para indicar o tipo de lista. Ela pode receber por argumento os seguintes tipos: { 1 , A , a , I , i }. <a href="inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
+                <p>Usado na tag 'ol' para indicar o tipo de lista. Ela pode receber por argumento os seguintes tipos: { 1 , A , a , I , i }. <a href="../../inspect.html" target="_blank">Inspecione</a> o exemplo:</p>
                 <ol type="I">
                     <h4>Capítulos:</h4>
                     <li>O grande desastre</li>
@@ -58,7 +58,7 @@
         <br><hr><br>
         <h2>Listas não ordenadas:</h2>
         <p>São listas que não tem ordenação alguma, elas apenas apresentam os itens.</p>
-        <p>A tag para <font color="red">U</font>nordered <font color="red">L</font>ist (Lista não ordenadas em inglês) é 'ul'. <a href="inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
+        <p>A tag para <font color="red">U</font>nordered <font color="red">L</font>ist (Lista não ordenadas em inglês) é 'ul'. <a href="../../inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
         <ul>
             <h2><b>Lista de supermercado:</b></h2>
             <li>Batata</li>
@@ -72,7 +72,7 @@
         <h2><font color="red">Hacker Area!</font></h2>
         <p>Existe um tipo de argumento que pode ir na tag 'ul':</p>
         <h3>Type:</h3>
-        <p>Usado na tag 'ul' para indicar que figurinha marca cadaa item da lista. ele aceita por argumento os seguintes tipos: { disc , square , circle }. <a href="inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
+        <p>Usado na tag 'ul' para indicar que figurinha marca cadaa item da lista. ele aceita por argumento os seguintes tipos: { disc , square , circle }. <a href="../../inspect.html" target="_blank">Inspecione</a> o seguinte exemplo:</p>
         <ul type="square">
             <h2>Ingrediantes para bolo</h2>
             <li>Ovos</li>
