--- a/pages/tables/table.html
+++ b/pages/tables/table.html
@@ -5,10 +5,10 @@
         <title>Tabelas</title>
     </head>
     <body>
-        <a href="index.html" id="top">Home</a>
+        <a href="../../index.html" id="top">Home</a>
         <h1>Tabelas</h1>
         <p>Tabelas são uma forma muito eficaz de arrumar informações. E são muito fáceis de fazer em HTML! basta usar a tag 'table' (tabela em inglês) e depois colocar os itens nos lugares certos.</p>
-        <p>Aqui vocês também vão precisar de um pouco de CSS. Vamos precisar dele para colocar bordas na tabela. <a href="./inspect.html">Inspecione</a> a tag logo depois deste parágrafo.</p>
+        <p>Aqui vocês também vão precisar de um pouco de CSS. Vamos precisar dele para colocar bordas na tabela. <a href="../../inspect.html">Inspecione</a> a tag logo depois deste parágrafo.</p>
         <style>
             table, th, td{
                 border: 1px solid black;/*Coloca borda na tabela*/
@@ -22,7 +22,7 @@
             <li>'th': (<b>T</b>able <b>H</b>eader) Indica um título para um coluna ou uma linha, dependendo de onde for colocado.</li>
             <li>'caption': Coloca um título/descrição no topo da sua tabela.</li>
         </ul>
-        <p><a href="./inspect.html">Inspecione</a> os seguintes exeplos para entender melhor como funcionam as tabelas:</p>
+        <p><a href="../../inspect.html">Inspecione</a> os seguintes exeplos para entender melhor como funcionam as tabelas:</p>
         <br><hr><br>
         <table>
             <caption>Tabela com headers para cada coluna</caption>
@@ -88,7 +88,7 @@
         <br><hr><br>
         <h2><font color="red">Hacker Area!</font></h2>
         <p>Você pode também mesclar colunas e linhas. Para isso, use as propriedades 'colspan' e 'rowspan', respectivamente</p>
-        <p><a href="./inspect.html">Inspecione</a> o seguintes exemplos para poder ver como se faz isso:</p>
+        <p><a href="../../inspect.html">Inspecione</a> o seguintes exemplos para poder ver como se faz isso:</p>
         <br><hr><br>
         <table>
             <caption>Colspan</caption>
