--- a/inspect.html
+++ b/inspect.html
@@ -11,7 +11,7 @@
         <p>Você pode também ver todo o código HTML do site presionando ctrl+shift+i e depois você pode navegar pelo código para achar seu elemente.</p> 
         <p>Ele mostra qual elemento está sendo selecionado na página. Você também pode alterar o código HTML da página nessa aba, mas as modificações não serão permanentes.</p>
         <p>Você vai ver algo parecido com isso:</p>
-        <img src="link-image.png">
+        <img src="./pages/links/link-image.png">
         <h4>Atenção: Isso não funciona no Internet Explorer nem no Microsoft Edge</h4>
         <hr>
         <h1>Como inspecionar no celular</h1>
