--- a/pages/forms/form.html
+++ b/pages/forms/form.html
@@ -5,13 +5,13 @@
         <title>Formulário</title>
     </head>
     <body>
-        <a href="index.html" id="top">Home</a>
+        <a href="../../index.html" id="top">Home</a>
         <h1>Formulário</h1>
         <h2>Atenção: Esta página requer conhecimentos das outras páginas. Recomenda-se que veja as outras antes de progredir nesta página.</h2>
         <br><br><br>
         <p>Formulário é uma série de campos onde preenchemos dados que vão ajudar o usuário a interagir com nosso site.</p>
         <p>Para criar esses campos, vamos usar a tag 'form' e dentro dela, os itens com a tag 'input'</p>
-        <p>Cada input pode ser de um tipo, definido na propriedade 'type'. No formulário abaixo, <a href="inspect.html" target="_blank">inspecione</a> os elementos e veja quais os tipos usados.</p>
+        <p>Cada input pode ser de um tipo, definido na propriedade 'type'. No formulário abaixo, <a href="../../inspect.html" target="_blank">inspecione</a> os elementos e veja quais os tipos usados.</p>
         <p>Cada input tem também um 'name', que funciona de forma similar ao 'id'. Por fim, cada input tem um 'value', que é exatamente o que está escrito dentro da caixinha</p>
         <p>ou a opção selecionada. Vamos brincar um pouco com isso:</p>
         <hr>
