--- a/pages/id/id.html
+++ b/pages/id/id.html
@@ -5,13 +5,13 @@
         <title>IDs e JavaScript</title>
     </head>
     <body>
-        <a href="index.html">Home</a>
+        <a href="../../index.html">Home</a>
         <h1>IDs e JavaScript</h1>
         <p>Até agora só usamos os comandos 'alert' e 'prompt' para interagir com nosso site. Mas e se eu quiser mudar o conteúdo dentro do nosso site?</p>
         <p>Para isso servem os IDs. Eles são nomes que vocês vão dar a pedaços do site. Para fazer isso, basta colocar a propriedade 'id' dentro da tag que vocês quer dar um nome</p>
         <p>Depois que tiver feito isso, você vai fazer uma referência no arquivo JavaScript para poder mexer com o conteúdo.</p>
         <p>Vamos apenas mudar o texto desta página aqui. Você vai poder fazer suas próprias alterações em páginas dos exercícios.</p>
-        <p>O programa do JavaScript está programado para rodar quando apertamos o botão do lado (vide <a href="buttons.html">Botões</a>). Você vai aprender a usá-los na seção de botões deste artigo.</p>
+        <p>O programa do JavaScript está programado para rodar quando apertamos o botão do lado (vide <a href="../buttons/buttons.html">Botões</a>). Você vai aprender a usá-los na seção de botões deste artigo.</p>
         <hr>
         <p id="teste"></p>
         <button id="runner">RUN</button>
@@ -21,11 +21,11 @@
         <h2><font color="red">Hacker Area!</font></h2>
         <h3>A tag 'div'</h3>
         <p>Esta tag é muito importante. Ela não faz nada com sua página da web, mas ela serve de envelope. Você pode fazer com que vários elementos fiquem marcados por um ID</p>
-        <p>mechendo neles ao mesmo tempo. O botão a seguir faz com que tudo que estiver dentro da div 'oops' suma. <a href="inspect.html" target="_blank">Inspecione</a> os elementos e olhe para o JavaScript da página.</p>
+        <p>mechendo neles ao mesmo tempo. O botão a seguir faz com que tudo que estiver dentro da div 'oops' suma. <a href="../../inspect.html" target="_blank">Inspecione</a> os elementos e olhe para o JavaScript da página.</p>
         <div id="oops">
             <h1>Batatinha</h1>
             <p>Eu gosto muito de batata!!</p>
-            <img height="200" src="batata.jpg">
+            <img height="200" src="batata.jpg">buttons.html
         </div>
         <button id="eraser">Oops...</button>
         <br>
