--- a/pages/images/images.html
+++ b/pages/images/images.html
@@ -5,7 +5,7 @@
         <title>Imagens</title>
     </head>
     <body>
-        <a href="index.html">Home</a>
+        <a href="../../index.html">Home</a>
         <h1>Imagens</h1>
         <p>Você pode colocar imagens na sua página da internet! Fica muito legal e bonito! Vamos ver como faz isso:</p>
         <p>Aqui está uma imagem. Para sua página entender que o que você está colocando é uma imagem, você precisa usar a tag 'img'</p>
@@ -18,14 +18,14 @@
         <h3>Link interno:</h3>
         <p>Links internos fazem referência a um arquivo dentro da pasta do site que você está fazendo. Assim, você pode salvar suas próprias fotos no site.</p>
         <p>Para fazer a referência, basta colocar o caminho do arquivo (pasta1/pasta2/arquivo) ou simplesmente o nome do arquivo se ele estiver na mesma página.</p>
-        <p>Confira como faz a referência <a href="inspect.html" target="_blank">inspecionando</a> a imagem a seguir:</p>
+        <p>Confira como faz a referência <a href="../../inspect.html" target="_blank">inspecionando</a> a imagem a seguir:</p>
         <img src="html5.png" height="121">
         <h3>Link externo:</h3>
         <p>Foi o usado no exemplo anterior, a imagem do cachorrinho. Nele você coloca o link da internet nas aspas do 'src'.</p>
         <hr>
         <h2><font color="red">Hacker Area!</font></h2>
-        <p>Você pode colocar links dentro de imagens. Basta que você coloque a tag da imagem dentro de uma tag de link. (vide <a href="links.html">Links</a>)</p>
-        <p><a href="inspect.html" target="_blank">Inspecione</a> e teste a imagem a seguir:</p>
+        <p>Você pode colocar links dentro de imagens. Basta que você coloque a tag da imagem dentro de uma tag de link. (vide <a href="../links/links.html">Links</a>)</p>
+        <p><a href="../../inspect.html" target="_blank">Inspecione</a> e teste a imagem a seguir:</p>
         <a href="https://geekprank.com/matrix-code-rain/" target="_blank"><img height="300" src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2017/10/27/09/matrix-code.jpg?w968"></a>
         <br>
         <a href="#top">Voltar para o topo</a>
